Add agent search engines
